--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quản trị Admin</title>
+  <title>Mượn sách</title>
 
   <link rel="stylesheet" href="/css/main.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
